Source/WebGPU/WGSL/tests/invalid/empty-struct.wgsl
// RUN: %not %wgslc | %check

// CHECK-L: structures must have at least one member
struct S { }
